# presidio-vault

./: .gitignore  README.md  flake.nix  pyproject.toml  setup.sh
.github/workflows/: build.yaml  publish-to-test.yaml  publish.yaml
presidio_vault/: vault.py
tests/: vault_test.py
