[tool.poetry]
name = "presidio-vault"
version = "0.1.0"
description = "A HashiCorp Vault operator that allows anonymization and de-anonymization using Microsoft Presidio."
authors = ["Akshay Karle <1443108+akshaykarle@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "presidio_vault"}]

[tool.poetry.dependencies]
python = "^3.8"
presidio-anonymizer = "^2.2.355"
hvac = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.pytest.group.dev.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"